fixed all components to overflow: hidden

--- a/src/CSS/Address.css
+++ b/src/CSS/Address.css
@@ -5,6 +5,7 @@
     height: auto;
     background-color: transparent;
     padding: .5em 0;
+    overflow: hidden;
 }
 
 
