--- a/src/CSS/CopyRight.css
+++ b/src/CSS/CopyRight.css
@@ -5,6 +5,7 @@
     padding: 2em 0;
     margin-top: 15%;
     border-top: solid var(--gray) 1px;
+    overflow: hidden;
 }
 
 .copy_right p {
