--- a/src/CSS/Offer.css
+++ b/src/CSS/Offer.css
@@ -4,6 +4,7 @@
     /* background-color: red; */
     padding: 1em 7em;
     margin-bottom: 1em;
+    overflow: hidden;
 }
 
 
