--- a/src/CSS/SecondPage.css
+++ b/src/CSS/SecondPage.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     transition: var(--transition_two);
+    overflow: hidden;
 }
 
 .second-container .first {
